springer template started

--- a/deep_conv_net_survey/main.tex
+++ b/deep_conv_net_survey/main.tex
@@ -155,7 +155,7 @@ In the last few years, convolutional networks shows a significant performance im
 %2013
 
 \subsection{Network in Network }
-Inspired by the work of Ian J. Goodfellow et al..\cite{Goodfellow2013} on max out networks,  Min Lin et al. \cite{Lin2013} introduced a micro-network in each convolution layer so that it will compute more abstract features.This network gave a state-of-the-art performance in  ILSVRC 2013 competition with an error rate of 12.95\%.They used NVIDIA TITAN GPU to train the network. Using multilayer perceptron instead of voting to approximate convex functions of each  local patches may result in a good accuracy; but this is equivalent to moving linear separability problem into another hyperspace. So, if the input is in high frequency, this will end up in modeling large number of hidden layers and make the network structure more dependent on the problem. It will diverge the idea of the convolution network from \emph{learn anything} to a \emph{local search}.
+Inspired by the work of Ian J. Goodfellow et al.\cite{Goodfellow2013} on max out networks,  Min Lin et al. \cite{Lin2013} introduced a micro-network in each convolution layer so that it will compute more abstract features.This network gave a state-of-the-art performance in  ILSVRC 2013 competition with an error rate of 12.95\%.They used NVIDIA TITAN GPU to train the network. Using multilayer perceptron instead of voting to approximate convex functions of each  local patches may result in a good accuracy; but this is equivalent to moving linear separability problem into another hyperspace. So, if the input is in high frequency, this will end up in modeling large number of hidden layers and make the network structure more dependent on the problem. It will diverge the idea of the convolution network from \emph{learn anything} to a \emph{local search}.
 
 \subsection{Visualizing Convolutional Networks}
 
